добавлен блок promo

--- a/src/index.html
+++ b/src/index.html
@@ -74,44 +74,67 @@
         <div class="menu__overlay"></div>
     </div>
 
-    <header class="header">
-        <div class="container">
-            <div class="header__wrapper">
-                <div class="header__wrapper-inner">
-                    <div class="header__logo">
-                        <a href="#">
-                            <img src="icons/Logo.png" alt="logo">
-                        </a>
+    
+    <div class="promo">
+        <header class="header">
+            <div class="container">
+                <div class="header__wrapper">
+                    <div class="header__wrapper-inner">
+                        <div class="header__logo">
+                            <a href="#">
+                                <img src="icons/Logo.png" alt="logo">
+                            </a>
+                        </div>
+                        <nav class="header__menu">
+                            <ul class="header__list">
+                                <li class="header__link">
+                                    <a href="#">Home</a>
+                                </li>
+                                <li class="header__link">
+                                    <a href="#">About us</a>
+                                </li>
+                                <li class="header__link">
+                                    <a href="#">Menu</a>
+                                </li>
+                                <li class="header__link">
+                                    <a href="#">Features</a>
+                                </li>
+                                <li class="header__link">
+                                    <a href="#">Contact us</a>
+                                </li>
+                            </ul>
+                        </nav>
                     </div>
-                    <nav class="header__menu">
-                        <ul class="header__list">
-                            <li class="header__link">
-                                <a href="#">Home</a>
-                            </li>
-                            <li class="header__link">
-                                <a href="#">About us</a>
-                            </li>
-                            <li class="header__link">
-                                <a href="#">Menu</a>
-                            </li>
-                            <li class="header__link">
-                                <a href="#">Features</a>
-                            </li>
-                            <li class="header__link">
-                                <a href="#">Contact us</a>
-                            </li>
-                        </ul>
-                    </nav>
+                    <button class="button header__btn">Booking Now</button>
+                    <div class="hamburger">
+                        <span></span>
+                        <span class="long"></span>
+                        <span></span>
+                    </div>
                 </div>
-                <button class="button header__btn">Booking Now</button>
-                <div class="hamburger">
-                    <span></span>
-                    <span class="long"></span>
-                    <span></span>
+            </div>
+        </header>
+
+        <div class="container">
+            <div class="promo__wrapper">
+                <div class="promo__descr">
+                    <h1 class="promo__title">Making time a good time by making food the good food.</h1>
+                    <div class="promo__text">
+                        There are many things are needed to start the Fast Food Business. You need not only Just Food Stalls with Persons but also specialized equipment,
+                    </div>
+                    <div class="promo__btns">
+                        <button class="button promo__btn">Order Now</button>
+                        <button class="button promo__btn_white">Food Details</button>
+                    </div>
+                </div>
+                <div class="promo__img">
+                    <div class="promo__img-wrapper">
+                        <img src="img/promo/promo_img.png" alt="food">
+                    </div>
                 </div>
             </div>
         </div>
-    </header>
+    </div>
 
     <script src="js/script.js"></script>
 </body>
