добавил блок features

--- a/src/index.html
+++ b/src/index.html
@@ -73,8 +73,7 @@
         </div>
         <div class="menu__overlay"></div>
     </div>
-
-    
+   
     <div class="promo">
         <header class="header">
             <div class="container">
@@ -134,6 +133,54 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="bg-block">
+        <section class="features">
+            <div class="container">
+                <h2 class="title">
+                    Features
+                </h2>
+                <div class="subtitle">
+                    Food with a New Passion
+                </div>
+                <div class="features__wrapper">
+                    <div class="features__item">
+                        <div class="features__img">
+                            <img src="icons/features/ico1.png" alt="food">
+                        </div>
+                        <div class="features__item-title">
+                            Quality Food
+                        </div>
+                        <div class="features__item-text">
+                            It can be a very secure path to earn good money and make you very successful creative entrepreneur.
+                        </div>
+                    </div>
+                    <div class="features__item">
+                        <div class="features__img">
+                            <img src="icons/features/ico2.png" alt="food">
+                        </div>
+                        <div class="features__item-title">
+                            Food Delivery
+                        </div>
+                        <div class="features__item-text">
+                            It can be a very secure path to earn good money and make you very successful creative entrepreneur.
+                        </div>
+                    </div>
+                    <div class="features__item">
+                        <div class="features__img">
+                            <img src="icons/features/ico3.png" alt="food">
+                        </div>
+                        <div class="features__item-title">
+                            Super Taste
+                        </div>
+                        <div class="features__item-text">
+                            It can be a very secure path to earn good money and make you very successful creative entrepreneur.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 
     <script src="js/script.js"></script>
