--- a/src/index.html
+++ b/src/index.html
@@ -181,6 +181,28 @@
                 </div>
             </div>
         </section>
+
+        <section class="about">
+            <div class="container">
+                <div class="about__wrapper">
+                    <div class="about__img">
+                        <img src="img/about/female.png" alt="female">
+                    </div>
+                    <div class="about__descr">
+                        <h2 class="title title_left about__title">
+                            About as
+                        </h2>
+                        <div class="subtitle subtitle_left about__subtitle">
+                            Food Stalls with Persons but  to  Product marketing plane catlogues etc to. 
+                        </div>
+                        <div class="about__text">
+                            There are many things are needed to start the Fast Food Business. You need not only Just Food Stalls with Persons but also equipment  make your marketing plane Effective.
+                        </div>
+                        <button class="button about__btn">Read More</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 
     <script src="js/script.js"></script>
