Добавлен блок take

--- a/src/index.html
+++ b/src/index.html
@@ -472,9 +472,32 @@
                         </div>
                     </div>
                 </div>
+                <button class="button food-menu__btn">Learn More</button>
             </div>
         </section>
     </div>
+    
+    <section class="take">
+        <div class="take__bg"></div>
+        <div class="container">
+            <div class="take__wrapper">
+                <div class="take__descr">
+                    <h2 class="title title_left">Take away</h2>
+                    <div class="subtitle subtitle_left">Food Stalls with Persons but  to &nbsp;<br> Product marketing plane. </div>
+                    <div class="take__text">
+                        There are many things are needed to start the Fast Food Business. You need not only Just Food Stalls with Persons but also specialized equipmentwith Persons but also  Just Food Stalls with Persons.
+                    </div>
+                    <div class="take__btns">
+                        <a href="#"><img src="icons/take-away/app-store.png" alt="app store"></a>
+                        <a href="#"><img src="icons/take-away/google-play.png" alt="google play"></a>
+                    </div>
+                </div>
+                <div class="take__img">
+                    <img src="img/take-away/mobile.png" alt="mobile">
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="js/script.js"></script>
 </body>
