--- a/src/index.html
+++ b/src/index.html
@@ -499,6 +499,148 @@
         </div>
     </section>
 
+    <section class="testimonial">
+        <div class="container">
+            <h2 class="title">Testimonial</h2>
+            <div class="subtitle">
+                Making Food great again and again
+            </div>
+            <div class="testimonial__descr">
+                You need not only Just Food Stalls with Persons but also specialized equipment, Skills to manage &nbsp;<br> Customers, Effective Product catlogues etc to make your.
+            </div>
+            <div class="carousel">
+                <div class="carousel__inner">
+                    <div>
+                        <div class="carousel__img">
+                            <div class="carousel__img-wrapper">
+                                <img src="img/carousel/carousel_img.png" alt="photo">
+                            </div>
+                        </div>
+                        <div class="carousel__descr">
+                            <div class="carousel__text">
+                                You need not only Just Food Stalls with Persons but also specialized equipment, Skills to manage Customers, Effective Product catlogues etc very successful to make your.
+                            </div>
+                            <div class="carousel__rating">
+                                <span class="star-active">
+                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M16 6.18173L10.1863 5.79951L7.99681 0.299011L5.80734 5.79951L0 6.18173L4.45419 9.96379L2.99256 15.701L7.99681 12.5378L13.0011 15.701L11.5395 9.96379L16 6.18173Z" fill="#EDEDED"/>
+                                    </svg>
+                                </span>
+                                <span class="star-active">
+                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M16 6.18173L10.1863 5.79951L7.99681 0.299011L5.80734 5.79951L0 6.18173L4.45419 9.96379L2.99256 15.701L7.99681 12.5378L13.0011 15.701L11.5395 9.96379L16 6.18173Z" fill="#EDEDED"/>
+                                    </svg>
+                                </span>
+                                <span class="star-active">
+                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M16 6.18173L10.1863 5.79951L7.99681 0.299011L5.80734 5.79951L0 6.18173L4.45419 9.96379L2.99256 15.701L7.99681 12.5378L13.0011 15.701L11.5395 9.96379L16 6.18173Z" fill="#EDEDED"/>
+                                    </svg>
+                                </span>
+                                <span>
+                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M16 6.18173L10.1863 5.79951L7.99681 0.299011L5.80734 5.79951L0 6.18173L4.45419 9.96379L2.99256 15.701L7.99681 12.5378L13.0011 15.701L11.5395 9.96379L16 6.18173Z" fill="#EDEDED"/>
+                                    </svg>
+                                </span>
+                                <span>
+                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M16 6.18173L10.1863 5.79951L7.99681 0.299011L5.80734 5.79951L0 6.18173L4.45419 9.96379L2.99256 15.701L7.99681 12.5378L13.0011 15.701L11.5395 9.96379L16 6.18173Z" fill="#EDEDED"/>
+                                    </svg>
+                                </span>
+                            </div>
+                            <div class="carousel__name">Augusta W. Reynoso</div>
+                            <div class="carousel__work">UI&UX DeSIGNER</div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="carousel__img">
+                            <div class="carousel__img-wrapper">
+                                <img src="img/carousel/carousel_img.png" alt="photo">
+                            </div>
+                        </div>
+                        <div class="carousel__descr">
+                            <div class="carousel__text">
+                                You need not only Just Food Stalls with Persons but also specialized equipment, Skills to manage Customers, Effective Product catlogues etc very successful to make your.
+                            </div>
+                            <div class="carousel__rating">
+                                <span class="star-active">
+                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M16 6.18173L10.1863 5.79951L7.99681 0.299011L5.80734 5.79951L0 6.18173L4.45419 9.96379L2.99256 15.701L7.99681 12.5378L13.0011 15.701L11.5395 9.96379L16 6.18173Z" fill="#EDEDED"/>
+                                    </svg>
+                                </span>
+                                <span class="star-active">
+                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M16 6.18173L10.1863 5.79951L7.99681 0.299011L5.80734 5.79951L0 6.18173L4.45419 9.96379L2.99256 15.701L7.99681 12.5378L13.0011 15.701L11.5395 9.96379L16 6.18173Z" fill="#EDEDED"/>
+                                    </svg>
+                                </span>
+                                <span class="star-active">
+                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M16 6.18173L10.1863 5.79951L7.99681 0.299011L5.80734 5.79951L0 6.18173L4.45419 9.96379L2.99256 15.701L7.99681 12.5378L13.0011 15.701L11.5395 9.96379L16 6.18173Z" fill="#EDEDED"/>
+                                    </svg>
+                                </span>
+                                <span>
+                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M16 6.18173L10.1863 5.79951L7.99681 0.299011L5.80734 5.79951L0 6.18173L4.45419 9.96379L2.99256 15.701L7.99681 12.5378L13.0011 15.701L11.5395 9.96379L16 6.18173Z" fill="#EDEDED"/>
+                                    </svg>
+                                </span>
+                                <span>
+                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M16 6.18173L10.1863 5.79951L7.99681 0.299011L5.80734 5.79951L0 6.18173L4.45419 9.96379L2.99256 15.701L7.99681 12.5378L13.0011 15.701L11.5395 9.96379L16 6.18173Z" fill="#EDEDED"/>
+                                    </svg>
+                                </span>
+                            </div>
+                            <div class="carousel__name">Augusta W. Reynoso</div>
+                            <div class="carousel__work">UI&UX DeSIGNER</div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="carousel__img">
+                            <div class="carousel__img-wrapper">
+                                <img src="img/carousel/carousel_img.png" alt="photo">
+                            </div>
+                        </div>
+                        <div class="carousel__descr">
+                            <div class="carousel__text">
+                                You need not only Just Food Stalls with Persons but also specialized equipment, Skills to manage Customers, Effective Product catlogues etc very successful to make your.
+                            </div>
+                            <div class="carousel__rating">
+                                <span class="star-active">
+                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M16 6.18173L10.1863 5.79951L7.99681 0.299011L5.80734 5.79951L0 6.18173L4.45419 9.96379L2.99256 15.701L7.99681 12.5378L13.0011 15.701L11.5395 9.96379L16 6.18173Z" fill="#EDEDED"/>
+                                    </svg>
+                                </span>
+                                <span class="star-active">
+                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M16 6.18173L10.1863 5.79951L7.99681 0.299011L5.80734 5.79951L0 6.18173L4.45419 9.96379L2.99256 15.701L7.99681 12.5378L13.0011 15.701L11.5395 9.96379L16 6.18173Z" fill="#EDEDED"/>
+                                    </svg>
+                                </span>
+                                <span class="star-active">
+                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M16 6.18173L10.1863 5.79951L7.99681 0.299011L5.80734 5.79951L0 6.18173L4.45419 9.96379L2.99256 15.701L7.99681 12.5378L13.0011 15.701L11.5395 9.96379L16 6.18173Z" fill="#EDEDED"/>
+                                    </svg>
+                                </span>
+                                <span>
+                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M16 6.18173L10.1863 5.79951L7.99681 0.299011L5.80734 5.79951L0 6.18173L4.45419 9.96379L2.99256 15.701L7.99681 12.5378L13.0011 15.701L11.5395 9.96379L16 6.18173Z" fill="#EDEDED"/>
+                                    </svg>
+                                </span>
+                                <span>
+                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M16 6.18173L10.1863 5.79951L7.99681 0.299011L5.80734 5.79951L0 6.18173L4.45419 9.96379L2.99256 15.701L7.99681 12.5378L13.0011 15.701L11.5395 9.96379L16 6.18173Z" fill="#EDEDED"/>
+                                    </svg>
+                                </span>
+                            </div>
+                            <div class="carousel__name">Augusta W. Reynoso</div>
+                            <div class="carousel__work">UI&UX DeSIGNER</div>
+                        </div>
+                    </div>
+                </div>
+                <button type="button" class="prev"><img src="icons/carousel/right_arrow.svg" alt="arrow"></button>
+                <button type="button" class="next"><img src="icons/carousel/right_arrow.svg" alt="arrow"></button>
+            </div>
+        </div>
+    </section>
+
+    <script src="js/tiny-slider.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
