--- a/src/index.html
+++ b/src/index.html
@@ -640,6 +640,21 @@
         </div>
     </section>
 
+    <section class="contact">
+        <div class="container">
+            <div class="contact__wrapper">
+                <h2 class="title">Contact</h2>
+                <div class="subtitle">
+                    Food Stalls with Persons but also specialized equipment, Skills to manage.
+                </div>
+                <form action="#" class="contact__form">
+                    <input name="text" type="text" placeholder="Enter your message">
+                    <button class="button contact__btn">Send</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
     <script src="js/tiny-slider.js"></script>
     <script src="js/script.js"></script>
 </body>
