--- a/src/index.html
+++ b/src/index.html
@@ -57,16 +57,16 @@
                         <a href="#">Home</a>
                     </li>
                     <li class="menu__link">
-                        <a href="#">About us</a>
+                        <a href="#about">About us</a>
                     </li>
                     <li class="menu__link">
-                        <a href="#">Menu</a>
+                        <a href="#menu">Menu</a>
                     </li>
                     <li class="menu__link">
-                        <a href="#">Features</a>
+                        <a href="#features">Features</a>
                     </li>
                     <li class="menu__link">
-                        <a href="#">Contact us</a>
+                        <a href="#contact">Contact us</a>
                     </li>
                 </ul>
             </nav>
@@ -74,7 +74,7 @@
         <div class="menu__overlay"></div>
     </div>
    
-    <div class="promo">
+    <div id="up" class="promo">
         <header class="header">
             <div class="container">
                 <div class="header__wrapper">
@@ -90,16 +90,16 @@
                                     <a href="#">Home</a>
                                 </li>
                                 <li class="header__link">
-                                    <a href="#">About us</a>
+                                    <a href="#about">About us</a>
                                 </li>
                                 <li class="header__link">
-                                    <a href="#">Menu</a>
+                                    <a href="#menu">Menu</a>
                                 </li>
                                 <li class="header__link">
-                                    <a href="#">Features</a>
+                                    <a href="#features">Features</a>
                                 </li>
                                 <li class="header__link">
-                                    <a href="#">Contact us</a>
+                                    <a href="#contact">Contact us</a>
                                 </li>
                             </ul>
                         </nav>
@@ -136,7 +136,7 @@
     </div>
 
     <div class="bg-block">
-        <section class="features">
+        <section id="features" class="features">
             <div class="container">
                 <h2 class="title">
                     Features
@@ -182,7 +182,7 @@
             </div>
         </section>
 
-        <section class="about">
+        <section id="about" class="about">
             <div class="container">
                 <div class="about__wrapper">
                     <div class="about__img">
@@ -204,7 +204,7 @@
             </div>
         </section>
 
-        <section class="food-menu">
+        <section id="menu" class="food-menu">
             <div class="container">
                 <h2 class="title">Menu</h2>
                 <div class="subtitle">
@@ -216,7 +216,7 @@
                 <div class="food-menu__wrapper">
                     <div class="food-menu__item">
                         <div class="food-menu__item-img">
-                            <img src="img/food-menu/Mask Group.png" alt="menu">
+                            <img src="img/food-menu/MaskGroup.png" alt="menu">
                         </div>
                         <div class="food-menu__item-names">
                             <div class="food-menu__item-name">Vegie Muffen</div>
@@ -259,7 +259,7 @@
 
                     <div class="food-menu__item">
                         <div class="food-menu__item-img">
-                            <img src="img/food-menu/Mask Group-1.png" alt="menu">
+                            <img src="img/food-menu/MaskGroup-1.png" alt="menu">
                         </div>
                         <div class="food-menu__item-names">
                             <div class="food-menu__item-name">Salads</div>
@@ -302,7 +302,7 @@
 
                     <div class="food-menu__item">
                         <div class="food-menu__item-img">
-                            <img src="img/food-menu/Mask Group-2.png" alt="menu">
+                            <img src="img/food-menu/MaskGroup-2.png" alt="menu">
                         </div>
                         <div class="food-menu__item-names">
                             <div class="food-menu__item-name">Burger</div>
@@ -345,7 +345,7 @@
 
                     <div class="food-menu__item">
                         <div class="food-menu__item-img">
-                            <img src="img/food-menu/Mask Group-3.png" alt="menu">
+                            <img src="img/food-menu/MaskGroup-3.png" alt="menu">
                         </div>
                         <div class="food-menu__item-names">
                             <div class="food-menu__item-name">Delmonico Steak dish</div>
@@ -388,7 +388,7 @@
 
                     <div class="food-menu__item">
                         <div class="food-menu__item-img">
-                            <img src="img/food-menu/Mask Group-5.png" alt="menu">
+                            <img src="img/food-menu/MaskGroup-5.png" alt="menu">
                         </div>
                         <div class="food-menu__item-names">
                             <div class="food-menu__item-name">Egg Masala</div>
@@ -431,7 +431,7 @@
 
                     <div class="food-menu__item">
                         <div class="food-menu__item-img">
-                            <img src="img/food-menu/Mask Group-4.png" alt="menu">
+                            <img src="img/food-menu/MaskGroup-4.png" alt="menu">
                         </div>
                         <div class="food-menu__item-names">
                             <div class="food-menu__item-name">Peach Melba dish</div>
@@ -640,7 +640,7 @@
         </div>
     </section>
 
-    <section class="contact">
+    <section id="contact" class="contact">
         <div class="container">
             <div class="contact__wrapper">
                 <h2 class="title">Contact</h2>
@@ -655,6 +655,62 @@
         </div>
     </section>
 
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__wrapper">
+                <div class="footer__contacts">
+                    <div class="footer__logo">
+                        <img src="icons/footer/footer_logo.png" alt="logo">
+                    </div>
+                    <ul>
+                        <li>www.company name.com</li>
+                        <li>companyname@gmail.com</li>
+                        <li>Phone: +7 485-118-03-25</li>
+                    </ul> 
+                </div>
+                <div class="footer__menu">
+                    <div class="footer__menu-home">
+                        <div class="footer__title">Home</div>
+                        <ul>
+                            <li><a href="#">Landingpage</a></li>
+                            <li><a href="#">Documentation</a></li>
+                            <li><a href="#">Referral Program</a></li>
+                            <li><a href="#">UI & UX Design</a></li>
+                            <li><a href="#">Web Design</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__menu-menu">
+                        <div class="footer__title">Menu</div>
+                        <ul>
+                            <li><a href="#">Landingpage</a></li>
+                            <li><a href="#">Documentation</a></li>
+                            <li><a href="#">Referral Program</a></li>
+                            <li><a href="#">UI & UX Design</a></li>
+                            <li><a href="#">Web Design</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__menu-company">
+                        <div class="footer__title">Company</div>
+                        <ul>
+                            <li><a href="#">Landingpage</a></li>
+                            <li><a href="#">Documentation</a></li>
+                            <li><a href="#">Referral Program</a></li>
+                        </ul>
+                        <div class="footer__social">
+                            <a href="#"><img src="icons/footer/instagram.svg" alt="instagram"></a>
+                            <a href="#"><img src="icons/footer/facebook.svg" alt="facebook"></a>
+                            <a href="#"><img src="icons/footer/twitter.svg" alt="twitter"></a>
+                            <a href="#"><img src="icons/footer/youtube.svg" alt="youtube"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <a href="#up" class="pageup"><img src="icons/circle-up.svg" alt="up"></a>
+
+    <script src="js/jquery.min.js"></script>
     <script src="js/tiny-slider.js"></script>
     <script src="js/script.js"></script>
 </body>
